set(HOLON_CORELIB_MATH_SOURCE_FILES)
set(HOLON_CORELIB_MATH_TEST_SOURCES)

add_subdirectory(zvec3d)

set(HOLON_CORELIB_SOURCE_FILES
  ${HOLON_CORELIB_SOURCE_FILES}
  ${HOLON_CORELIB_MATH_SOURCE_FILES}
  PARENT_SCOPE
  )
set(HOLON_CORELIB_TEST_SOURCES
  ${HOLON_CORELIB_TEST_SOURCES}
  ${HOLON_CORELIB_MATH_TEST_SOURCES}
  PARENT_SCOPE
  )
