set(HOLON_CORELIB_MATH_SOURCE_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/vec3d.cpp
  )
set(HOLON_CORELIB_MATH_TEST_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/misc_test.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/vec3d_test.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/ode_euler_test.cpp
  )

add_subdirectory(zvec3dwrap)

set(HOLON_CORELIB_SOURCE_FILES
  ${HOLON_CORELIB_SOURCE_FILES}
  ${HOLON_CORELIB_MATH_SOURCE_FILES}
  PARENT_SCOPE
  )
set(HOLON_CORELIB_TEST_SOURCES
  ${HOLON_CORELIB_TEST_SOURCES}
  ${HOLON_CORELIB_MATH_TEST_SOURCES}
  PARENT_SCOPE
  )
